<resources>

    <string name="app_name">LockMod</string>

    <string name="activity_pattern_settings">Pattern Settings</string>
    <string name="activity_general">General Settings</string>
    <string name="activity_experimental">Experimental Settings</string>
    <string name="activity_about">About LockMod</string>

    <string name="app_desc">Adds variuos tweaks to the Lollipop+ lockscreen and changes its appearance and behaviour</string>
    <string name="not_enabled_warning">This module isn\'t activated, changes will have no efect</string>
    <string name="wrong_version_warning">You are running an Android version below Lollipop (API Version: %d &lt; 21), this module will most probably have no effect on your lockscreen!</string>


    <string name="menu_toggle">Toggle Tweak</string>
    <string name="menu_preview">Toggle Preview</string>
    <string name="menu_calc">Unit Converter</string>

    <string name="dialog_calc_title">Convert dp to px</string>
    <string name="dialog_calc_enter_dp_text">Enter dp value:</string>
    <string name="dialog_calc_in_px_text">In px:</string>
    <string name="dialog_calc_out_px_format">%dpx</string>
    <string name="dialog_calc_positive">OK</string>

    <string name="pref_default">%s (default)</string>


    <!-- HEADERS -->
    <string name="header_colors">Colors</string>
    <string name="header_dimensions">Dimensions</string>
    <string name="header_stroke">Stroke</string>
    <string name="header_blur">Blurring</string>
    <string name="header_timing">Timing</string>
    <string name="header_rainbow_shader">Rainbow shader</string>
    <string name="header_miscellaneous">Miscellaneous</string>
    <string name="header_app">App</string>
    <string name="header_experimental">Experimental</string>
    <!-- /HEADERS -->


    <!-- PATTERN -->
    <string name="pattern_colors_regular_color_title">Regular Color</string>
    <string name="pattern_colors_regular_color">The normal color when drawing a pattern. Default: #FFFFFFFF</string>
    <string name="pattern_colors_error_color_title">Error Color</string>
    <string name="pattern_colors_error_color">The color of a wrong pattern. Default: #FFF4511E</string>
    <string name="pattern_colors_success_color_title">Success Color</string>
    <string name="pattern_colors_success_color">The color of a correct pattern. Hardly to see because the pattern is cleared right after a correct input. Default: #FFFFFFFF</string>
    <string name="pattern_colors_disable_last_segment_alpha_title">Disable last segment alpha</string>
    <string name="pattern_colors_disable_last_segment_alpha">Per default, the line between your finger and the last selected dot changes its alpha value based on the distance</string>

    <string name="pattern_dimensions_line_width_title">Line width</string>
    <string name="pattern_dimensions_line_width">The width of the line you draw to connect the dots. Default: 3dp</string>
    <string name="pattern_dimensions_dot_size_title">Dot size</string>
    <string name="pattern_dimensions_dot_size">The normal size of every dot of the pattern. Default: 12dp</string>
    <string name="pattern_dimensions_dot_size_activated_title">Dot size activated</string>
    <string name="pattern_dimensions_dot_size_activated">The size of an activated dot of the pattern (animated when clicked / hovered). Default: 28dp</string>

    <string name="pattern_stroke_dots_title">Stroke dots</string>
    <string name="pattern_stroke_dots">Enable to render dots with a stroked style</string>
    <string name="pattern_stroke_dots_width_title">Dot stroke width</string>
    <string name="pattern_stroke_dots_dash_title">Dashed stroke</string>
    <string name="pattern_stroke_dots_dash_multiplier_on">On time multiplier</string>
    <string name="pattern_stroke_dots_dash_multiplier_off">Off time multiplier</string>
    <string name="pattern_stroke_line_dash_title">Dash line</string>
    <string name="pattern_stroke_line_dash_multiplier_on">On time multiplier</string>
    <string name="pattern_stroke_line_dash_multiplier_off">Off time multiplier</string>

    <string name="pattern_blur_info">Unfortunately, blurring needs hardware acceleration to be disabled. If you enable blurring, the lock pattern view might become laggy</string>
    <string name="pattern_blur_dots_title">Blur dots</string>
    <string name="pattern_blur_dots_radius_title">Dot blur radius</string>
    <string name="pattern_blur_dots_mode_title">Dot blur mode</string>
    <string name="pattern_blur_line_title">Blur line</string>
    <string name="pattern_blur_line_radius_title">Line blur radius</string>
    <string name="pattern_blur_line_mode_title">Line blur mode</string>
    <string-array name="pattern_blur_mode_modes">
        <item>Normal</item>
        <item>Solid</item>
        <item>Outer</item>
        <item>Inner</item>
    </string-array>
    <string-array name="pattern_blur_mode_modes_values">
        <item>NORMAL</item>
        <item>SOLID</item>
        <item>OUTER</item>
        <item>INNER</item>
    </string-array>

    <string name="pattern_timing_clear_timeout_title">Clear timeout</string>
    <string name="pattern_timing_clear_timeout">The time after which a wrong pattern is cleared. Default: 2000ms</string>
    <string name="pattern_timing_appear_animation_duration_title">Appear animation duration</string>
    <string name="pattern_timing_appear_animation_duration">The duration in takes for the dots to move up from the bottom and fade in. Default: 220ms</string>
    <string name="pattern_timing_appear_animation_start_translation_title">Appear animation start translation</string>
    <string name="pattern_timing_appear_animation_start_translation">The multiplier to shift the dots down before the animation starts. Default: 1.5x</string>
    <string name="pattern_timing_appear_animation_delay_scale_title">Appear animation delay scale</string>
    <string name="pattern_timing_appear_animation_delay_scale">The delay it takes per dot to appear after each other. Default: 2.0x</string>
    <string name="pattern_timing_appear_animation_interpolator_title">Appear animation interpolator</string>
    <string name="pattern_timing_appear_animation_interpolator">Default: linear_out_slow_in</string>
    <string name="pattern_timing_disappear_animation_duration_title">Disappear animation duration</string>
    <string name="pattern_timing_disappear_animation_duration">The duration in takes for the dots to move up from the pattern view and fade out. Default: 125ms</string>
    <string name="pattern_timing_disappear_animation_start_translation_title">Disappear animation start translation</string>
    <string name="pattern_timing_disappear_animation_start_translation">The multiplier to move the dots up during the animation. Default: 1.2x</string>
    <string name="pattern_timing_disappear_animation_delay_scale_title">Disappear animation delay scale</string>
    <string name="pattern_timing_disappear_animation_delay_scale">The delay it takes per row to disappear after each other. Default: 0.8x</string>
    <string name="pattern_timing_disappear_animation_interpolator_title">Disappear animation interpolator</string>
    <string name="pattern_timing_disappear_animation_interpolator">Default: fast_out_linear_in</string>
    <string-array name="pattern_timing_interpolator_modes">
        <item>accelerate_cubic</item>
        <item>accelerate_decelerate</item>
        <item>accelerate_quad</item>
        <item>accelerate_quint</item>
        <item>anticipate</item>
        <item>anticipate_overshoot</item>
        <item>bounce</item>
        <item>cycle</item>
        <item>decelerate_cubic</item>
        <item>decelerate_quad</item>
        <item>decelerate_quint</item>
        <item>fast_out_linear_in</item>
        <item>fast_out_slow_in</item>
        <item>linear</item>
        <item>linear_out_slow_in</item>
        <item>overshoot</item>
    </string-array>

    <string name="pattern_rainbow_shader_activate_title">Activate rainbow shader</string>
    <string name="pattern_rainbow_shader_activate">Too crazy to be true. Use at your own risk. Unicorns will find and eat you.</string>
    <string name="pattern_rainbow_shader_type_title">Rainbow shader type</string>
    <string-array name="pattern_rainbow_shader_types">
        <item>Linear Gradient</item>
        <item>Radial Gradient</item>
        <item>Sweep Gradient</item>
    </string-array>
    <string-array name="pattern_rainbow_shader_types_values">
        <item>linear</item>
        <item>radial</item>
        <item>sweep</item>
    </string-array>

    <string name="pattern_miscellaneous_disable_clipping_title">Disable clipping</string>
    <string name="pattern_miscellaneous_disable_clipping">Not working with hardware acceleration disabled (blurring)</string>

    <string name="pattern_app_preview_pattern_size_title">Preview pattern size</string>
    <string name="pattern_app_preview_pattern_size">Requires app restart. Note: This is only changing the pattern size of the preview, not your actual lock pattern</string>
    <!-- /PATTERN -->


    <!-- GENERAL -->
    <string name="general_hide_launcher_icon_title">Hide launcher icon</string>
    <string name="general_hide_launcher_icon">May require launcher restart</string>
    <string name="general_debug_log_title">Debug log</string>
    <string name="general_debug_log">Should only be enabled for testing/debugging, causes lag</string>
    <string name="general_always_reload_title">Always reload settings</string>
    <string name="general_always_reload">If disabled, the device has to be restarted in order to apply changes. Might decrease lag if disabled. Restart reqired to re-enable</string>
    <!-- /GENERAL -->


    <!-- EXPERIMENTAL -->
    <string name="experimental_info">Stuff in here might not work correctly (or at all), use at your own risk</string>
    <!-- /EXPERIMENTAL -->


    <!-- ABOUT -->
    <string name="about_author">Developed by \"MrWasdennnoch\"</string>
    <string name="about_version">Version %1$s (%2$d)</string>
    <!-- /ABOUT -->


    <!--<string name="settings_miscellaneous_random_activation_animation_title">Random activation animation</string>
    <string name="settings_miscellaneous_random_activation_animation">Play the activation animation at the given interval at a given number of random dots</string>
    <string name="settings_miscellaneous_random_activation_animation_count_title">Random activated dots</string>
    <string name="settings_miscellaneous_random_activation_animation_count">The number of random activated dots at the given interval</string>
    <string name="settings_miscellaneous_random_activation_animation_interval_title">Random activated interval</string>-->


    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>

</resources>
