<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/header_colors">

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            hexValue="true"
            android:defaultValue="@color/regular_color_default"
            android:key="regular_color"
            android:summary="@string/pattern_colors_regular_color"
            android:title="@string/pattern_colors_regular_color_title"/>

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            hexValue="true"
            android:defaultValue="@color/error_color_default"
            android:key="error_color"
            android:summary="@string/pattern_colors_error_color"
            android:title="@string/pattern_colors_error_color_title"/>

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            hexValue="true"
            android:defaultValue="@color/success_color_default"
            android:key="success_color"
            android:summary="@string/pattern_colors_success_color"
            android:title="@string/pattern_colors_success_color_title"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="disable_last_segment_alpha"
            android:summary="@string/pattern_colors_disable_last_segment_alpha"
            android:title="@string/pattern_colors_disable_last_segment_alpha_title"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/header_dimensions">

        <com.ceco.lollipop.gravitybox.preference.SeekBarPreference
            interval="1"
            maximum="150"
            minimum="1"
            monitorBoxEnabled="true"
            monitorBoxUnit="px"
            android:defaultValue="3"
            android:key="line_width"
            android:summary="@string/pattern_dimensions_line_width"
            android:title="@string/pattern_dimensions_line_width_title"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarPreference
            interval="1"
            maximum="150"
            minimum="1"
            monitorBoxEnabled="true"
            monitorBoxUnit="px"
            android:defaultValue="12"
            android:key="dot_size"
            android:summary="@string/pattern_dimensions_dot_size"
            android:title="@string/pattern_dimensions_dot_size_title"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarPreference
            interval="1"
            maximum="200"
            minimum="1"
            monitorBoxEnabled="true"
            monitorBoxUnit="px"
            android:defaultValue="28"
            android:key="dot_size_activated"
            android:summary="@string/pattern_dimensions_dot_size_activated"
            android:title="@string/pattern_dimensions_dot_size_activated_title"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/header_stroke">

        <SwitchPreference
            android:defaultValue="false"
            android:key="stroke_dots"
            android:summary="@string/pattern_stroke_dots"
            android:title="@string/pattern_stroke_dots_title"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarPreference
            interval="1"
            maximum="100"
            minimum="1"
            monitorBoxEnabled="true"
            monitorBoxUnit="px"
            android:defaultValue="6"
            android:dependency="stroke_dots"
            android:key="stroke_dots_width"
            android:title="@string/pattern_stroke_dots_width_title"/>

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="stroke_dots"
            android:key="dash_dots"
            android:title="@string/pattern_stroke_dots_dash_title"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarFloatPreference
            factor="10"
            interval="1"
            maximum="50"
            minimum="1"
            monitorBoxEnabled="true"
            monitorBoxUnit="x"
            android:defaultValue="1"
            android:dependency="dash_dots"
            android:key="dash_dots_on_multiplier"
            android:title="@string/pattern_stroke_dots_dash_multiplier_on"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarFloatPreference
            factor="10"
            interval="1"
            maximum="50"
            minimum="1"
            monitorBoxEnabled="true"
            monitorBoxUnit="x"
            android:defaultValue="1"
            android:dependency="dash_dots"
            android:key="dash_dots_off_multiplier"
            android:title="@string/pattern_stroke_dots_dash_multiplier_off"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="dash_line"
            android:title="@string/pattern_stroke_line_dash_title"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarFloatPreference
            factor="10"
            interval="1"
            maximum="50"
            minimum="1"
            monitorBoxEnabled="true"
            monitorBoxUnit="x"
            android:defaultValue="1"
            android:dependency="dash_line"
            android:key="dash_line_on_multiplier"
            android:title="@string/pattern_stroke_line_dash_multiplier_on"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarFloatPreference
            factor="10"
            interval="1"
            maximum="50"
            minimum="1"
            monitorBoxEnabled="true"
            monitorBoxUnit="x"
            android:defaultValue="1"
            android:dependency="dash_line"
            android:key="dash_line_off_multiplier"
            android:title="@string/pattern_stroke_line_dash_multiplier_off"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/header_blur">

        <Preference
            android:selectable="false"
            android:summary="@string/pattern_blur_info"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="blur_dot"
            android:title="@string/pattern_blur_dots_title"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarPreference
            interval="1"
            maximum="50"
            minimum="1"
            monitorBoxEnabled="true"
            monitorBoxUnit="px"
            android:defaultValue="5"
            android:dependency="blur_dot"
            android:key="blur_dot_radius"
            android:title="@string/pattern_blur_dots_radius_title"/>

        <ListPreference
            android:defaultValue="NORMAL"
            android:dependency="blur_dot"
            android:entries="@array/pattern_blur_mode_modes"
            android:entryValues="@array/pattern_blur_mode_modes_values"
            android:key="blur_dot_mode"
            android:title="@string/pattern_blur_dots_mode_title"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="blur_line"
            android:title="@string/pattern_blur_line_title"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarPreference
            interval="1"
            maximum="50"
            minimum="1"
            monitorBoxEnabled="true"
            monitorBoxUnit="px"
            android:defaultValue="5"
            android:dependency="blur_line"
            android:key="blur_line_radius"
            android:title="@string/pattern_blur_line_radius_title"/>

        <ListPreference
            android:defaultValue="NORMAL"
            android:dependency="blur_line"
            android:entries="@array/pattern_blur_mode_modes"
            android:entryValues="@array/pattern_blur_mode_modes_values"
            android:key="blur_line_mode"
            android:title="@string/pattern_blur_line_mode_title"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/header_timing">

        <com.ceco.lollipop.gravitybox.preference.SeekBarPreference
            interval="50"
            maximum="10000"
            minimum="0"
            monitorBoxEnabled="true"
            monitorBoxUnit="ms"
            android:defaultValue="2000"
            android:key="clear_timeout"
            android:summary="@string/pattern_timing_clear_timeout"
            android:title="@string/pattern_timing_clear_timeout_title"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarPreference
            interval="1"
            maximum="2000"
            minimum="0"
            monitorBoxEnabled="true"
            monitorBoxUnit="ms"
            android:defaultValue="220"
            android:key="appear_animation_duration"
            android:summary="@string/pattern_timing_appear_animation_duration"
            android:title="@string/pattern_timing_appear_animation_duration_title"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarFloatPreference
            factor="10"
            interval="1"
            maximum="60"
            minimum="0"
            monitorBoxEnabled="true"
            monitorBoxUnit="x"
            android:defaultValue="1.5"
            android:key="appear_animation_start_translation"
            android:summary="@string/pattern_timing_appear_animation_start_translation"
            android:title="@string/pattern_timing_appear_animation_start_translation_title"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarFloatPreference
            factor="10"
            interval="1"
            maximum="100"
            minimum="0"
            monitorBoxEnabled="true"
            monitorBoxUnit="x"
            android:defaultValue="2.0"
            android:key="appear_animation_delay_scale"
            android:summary="@string/pattern_timing_appear_animation_delay_scale"
            android:title="@string/pattern_timing_appear_animation_delay_scale_title"/>

        <tk.wasdennnoch.lockmod.misc.prefs.DefaultListPreference
            android:defaultValue="linear_out_slow_in"
            android:entries="@array/pattern_timing_interpolator_modes"
            android:entryValues="@array/pattern_timing_interpolator_modes"
            android:key="appear_animation_interpolator"
            android:summary="@string/pattern_timing_appear_animation_interpolator"
            android:title="@string/pattern_timing_appear_animation_interpolator_title"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarPreference
            interval="1"
            maximum="2000"
            minimum="0"
            monitorBoxEnabled="true"
            monitorBoxUnit="ms"
            android:defaultValue="125"
            android:key="disappear_animation_duration"
            android:summary="@string/pattern_timing_disappear_animation_duration"
            android:title="@string/pattern_timing_disappear_animation_duration_title"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarFloatPreference
            factor="10"
            interval="1"
            maximum="200"
            minimum="0"
            monitorBoxEnabled="true"
            monitorBoxUnit="x"
            android:defaultValue="1.2"
            android:key="disappear_animation_start_translation"
            android:summary="@string/pattern_timing_disappear_animation_start_translation"
            android:title="@string/pattern_timing_disappear_animation_start_translation_title"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarFloatPreference
            factor="10"
            interval="1"
            maximum="100"
            minimum="0"
            monitorBoxEnabled="true"
            monitorBoxUnit="x"
            android:defaultValue="0.8"
            android:key="disappear_animation_delay_scale"
            android:summary="@string/pattern_timing_disappear_animation_delay_scale"
            android:title="@string/pattern_timing_disappear_animation_delay_scale_title"/>

        <tk.wasdennnoch.lockmod.misc.prefs.DefaultListPreference
            android:defaultValue="fast_out_linear_in"
            android:entries="@array/pattern_timing_interpolator_modes"
            android:entryValues="@array/pattern_timing_interpolator_modes"
            android:key="disappear_animation_interpolator"
            android:summary="@string/pattern_timing_disappear_animation_interpolator"
            android:title="@string/pattern_timing_disappear_animation_interpolator_title"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/header_rainbow_shader">

        <SwitchPreference
            android:defaultValue="false"
            android:key="rainbow_shader"
            android:summary="@string/pattern_rainbow_shader_activate"
            android:title="@string/pattern_rainbow_shader_activate_title"/>

        <ListPreference
            android:defaultValue="linear"
            android:dependency="rainbow_shader"
            android:entries="@array/pattern_rainbow_shader_types"
            android:entryValues="@array/pattern_rainbow_shader_types_values"
            android:key="rainbow_shader_type"
            android:title="@string/pattern_rainbow_shader_type_title"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/header_miscellaneous">

        <SwitchPreference
            android:defaultValue="false"
            android:key="disable_clipping"
            android:summary="@string/pattern_miscellaneous_disable_clipping"
            android:title="@string/pattern_miscellaneous_disable_clipping_title"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/header_app">

        <com.ceco.lollipop.gravitybox.preference.SeekBarPreference
            interval="1"
            maximum="6"
            minimum="3"
            monitorBoxEnabled="true"
            android:defaultValue="3"
            android:key="preview_pattern_size"
            android:summary="@string/pattern_app_preview_pattern_size"
            android:title="@string/pattern_app_preview_pattern_size_title"/>

    </PreferenceCategory>


    <!--<PreferenceCategory
        android:title="Experimental">

        <SwitchPreference
            android:defaultValue="false"
            android:key="random_activation_animation"
            android:summary="@string/settings_miscellaneous_random_activation_animation"
            android:title="@string/settings_miscellaneous_random_activation_animation_title"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarPreference
            interval="1"
            maximum="9"
            minimum="1"
            monitorBoxEnabled="true"
            android:defaultValue="1"
            android:dependency="random_activation_animation"
            android:key="random_activation_count"
            android:summary="@string/settings_miscellaneous_random_activation_animation_count"
            android:title="@string/settings_miscellaneous_random_activation_animation_count_title"/>

        <com.ceco.lollipop.gravitybox.preference.SeekBarPreference
            interval="10"
            maximum="5000"
            minimum="100"
            monitorBoxEnabled="true"
            monitorBoxUnit="ms"
            android:defaultValue="1000"
            android:dependency="random_activation_animation"
            android:key="random_activation_interval"
            android:title="@string/settings_miscellaneous_random_activation_animation_interval_title"/>

    </PreferenceCategory>-->

</PreferenceScreen>